package controller;

import exception.InvalidMoveException;
import model.moves.*;

public interface MoveRequestHandler {
    void handle(Movement movement, int groupID) throws InvalidMoveException;
    void handle(DamageEffect damage, int groupID) throws InvalidMoveException;
    void handle(Grab grab, int groupID) throws InvalidMoveException;

    void handle(Run run, int groupID) throws InvalidMoveException;

    void handle(MoveAndGrab moveAndGrab, int groupID) throws InvalidMoveException;
}
